1.0/ANTLR4PLGNB82/ANTLRAntTask/build/generated-sources/antlr4/org/nemesis/antlr/v4/ant/task/depend/parser/impl/ANTLRv4Parser.java
// Generated from org\nemesis\antlr\v4\ant\task\depend\parser\impl\ANTLRv4.g4 by ANTLR 4.7.1
package org.nemesis.antlr.v4.ant.task.depend.parser.impl;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ANTLRv4Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ID_STARTING_WITH_UPPERCASE=1, ID_STARTING_WITH_LOWERCASE=2, LEXER_CHAR_SET=3, 
		DOC_COMMENT=4, BLOCK_COMMENT=5, LINE_COMMENT=6, INT=7, STRING_LITERAL=8, 
		UNTERMINATED_STRING_LITERAL=9, BEGIN_ARGUMENT=10, BEGIN_ACTION=11, OPTIONS=12, 
		TOKENS=13, CHANNELS=14, IMPORT=15, FRAGMENT=16, LEXER=17, PARSER=18, GRAMMAR=19, 
		PROTECTED=20, PUBLIC=21, PRIVATE=22, RETURNS=23, LOCALS=24, THROWS=25, 
		CATCH=26, FINALLY=27, MODE=28, COLON=29, COLONCOLON=30, COMMA=31, SEMI=32, 
		LPAREN=33, RPAREN=34, LBRACE=35, RBRACE=36, RARROW=37, LT=38, ASSOC=39, 
		RIGHT=40, LEFT=41, FAIL=42, GT=43, ASSIGN=44, QUESTION=45, STAR=46, PLUS_ASSIGN=47, 
		PLUS=48, OR=49, DOLLAR=50, RANGE=51, DOT=52, AT=53, HEADER=54, MEMBERS=55, 
		SHARP=56, NOT=57, ID=58, WS=59, ERRCHAR=60, END_ARGUMENT=61, UNTERMINATED_ARGUMENT=62, 
		ARGUMENT_CONTENT=63, END_ACTION=64, UNTERMINATED_ACTION=65, ACTION_CONTENT=66, 
		OPT_BLOCK_COMMENT=67, OPT_LINE_COMMENT=68, SUPER_CLASS=69, LANGUAGE=70, 
		TOKEN_VOCAB=71, TOKEN_LABEL_TYPE=72, OPT_WS=73, TOK_BLOCK_COMMENT=74, 
		TOK_LINE_COMMENT=75, TOK_ID=76, TOK_WS=77, CHN_BLOCK_COMMENT=78, CHN_LINE_COMMENT=79, 
		CHN_WS=80, LEXER_COMMAND_LINE_COMMENT=81, SKIP_COMMAND=82, MORE_COMMAND=83, 
		TYPE_COMMAND=84, CHANNEL_COMMAND=85, MODE_COMMAND=86, PUSHMODE_COMMAND=87, 
		POPMODE_COMMAND=88, LEXER_COMMAND_WS=89, UNTERMINATED_CHAR_SET=90;
	public static final int
		RULE_grammarFile = 0, RULE_grammarSpec = 1, RULE_grammarType = 2, RULE_analyzerDirectiveSpec = 3, 
		RULE_optionsSpec = 4, RULE_optionSpec = 5, RULE_superClassSpec = 6, RULE_languageSpec = 7, 
		RULE_tokenVocabSpec = 8, RULE_tokenLabelTypeSpec = 9, RULE_delegateGrammars = 10, 
		RULE_delegateGrammar = 11, RULE_grammarIdentifier = 12, RULE_tokensSpec = 13, 
		RULE_tokenList = 14, RULE_channelsSpec = 15, RULE_idList = 16, RULE_action = 17, 
		RULE_actionDestination = 18, RULE_actionScope = 19, RULE_actionBlock = 20, 
		RULE_modeSpec = 21, RULE_ruleSpec = 22, RULE_parserRuleSpec = 23, RULE_parserRuleDeclaration = 24, 
		RULE_exceptionGroup = 25, RULE_exceptionHandler = 26, RULE_finallyClause = 27, 
		RULE_parserRulePrequel = 28, RULE_parserRuleReturns = 29, RULE_throwsSpec = 30, 
		RULE_localsSpec = 31, RULE_ruleAction = 32, RULE_parserRuleVisibility = 33, 
		RULE_parserRuleDefinition = 34, RULE_parserRuleLabeledAlternative = 35, 
		RULE_altList = 36, RULE_parserRuleAlternative = 37, RULE_parserRuleElement = 38, 
		RULE_labeledParserRuleElement = 39, RULE_parserRuleAtom = 40, RULE_parserRuleReference = 41, 
		RULE_actionBlockArguments = 42, RULE_lexerRuleSpec = 43, RULE_lexerRuleDeclaration = 44, 
		RULE_tokenRuleDeclaration = 45, RULE_fragmentRuleDeclaration = 46, RULE_lexerRuleBlock = 47, 
		RULE_lexerRuleAlt = 48, RULE_lexerRuleElements = 49, RULE_lexerRuleElement = 50, 
		RULE_labeledLexerRuleElement = 51, RULE_lexerRuleElementBlock = 52, RULE_lexerCommands = 53, 
		RULE_lexerCommand = 54, RULE_lexerCommandExpr = 55, RULE_lexerRuleAtom = 56, 
		RULE_ebnf = 57, RULE_blockSuffix = 58, RULE_ebnfSuffix = 59, RULE_notSet = 60, 
		RULE_blockSet = 61, RULE_setElement = 62, RULE_block = 63, RULE_characterRange = 64, 
		RULE_terminal = 65, RULE_elementOptions = 66, RULE_elementOption = 67, 
		RULE_tokenOption = 68, RULE_identifier = 69, RULE_ruleElementIdentifier = 70, 
		RULE_classIdentifier = 71, RULE_parserRuleIdentifier = 72, RULE_tokenIdentifier = 73;
	public static final String[] ruleNames = {
		"grammarFile", "grammarSpec", "grammarType", "analyzerDirectiveSpec", 
		"optionsSpec", "optionSpec", "superClassSpec", "languageSpec", "tokenVocabSpec", 
		"tokenLabelTypeSpec", "delegateGrammars", "delegateGrammar", "grammarIdentifier", 
		"tokensSpec", "tokenList", "channelsSpec", "idList", "action", "actionDestination", 
		"actionScope", "actionBlock", "modeSpec", "ruleSpec", "parserRuleSpec", 
		"parserRuleDeclaration", "exceptionGroup", "exceptionHandler", "finallyClause", 
		"parserRulePrequel", "parserRuleReturns", "throwsSpec", "localsSpec", 
		"ruleAction", "parserRuleVisibility", "parserRuleDefinition", "parserRuleLabeledAlternative", 
		"altList", "parserRuleAlternative", "parserRuleElement", "labeledParserRuleElement", 
		"parserRuleAtom", "parserRuleReference", "actionBlockArguments", "lexerRuleSpec", 
		"lexerRuleDeclaration", "tokenRuleDeclaration", "fragmentRuleDeclaration", 
		"lexerRuleBlock", "lexerRuleAlt", "lexerRuleElements", "lexerRuleElement", 
		"labeledLexerRuleElement", "lexerRuleElementBlock", "lexerCommands", "lexerCommand", 
		"lexerCommandExpr", "lexerRuleAtom", "ebnf", "blockSuffix", "ebnfSuffix", 
		"notSet", "blockSet", "setElement", "block", "characterRange", "terminal", 
		"elementOptions", "elementOption", "tokenOption", "identifier", "ruleElementIdentifier", 
		"classIdentifier", "parserRuleIdentifier", "tokenIdentifier"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"'options'", "'tokens'", "'channels'", "'import'", "'fragment'", "'lexer'", 
		"'parser'", "'grammar'", "'protected'", "'public'", "'private'", "'returns'", 
		"'locals'", "'throws'", "'catch'", "'finally'", null, null, null, null, 
		null, null, null, null, null, null, null, "'assoc'", "'right'", "'left'", 
		"'fail'", null, null, null, null, null, null, null, null, null, null, 
		null, "'header'", "'members'", null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "'superClass'", "'language'", "'tokenVocab'", 
		"'TokenLabelType'", null, null, null, null, null, null, null, null, null, 
		"'skip'", "'more'", "'type'", "'channel'", null, "'pushMode'", "'popMode'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ID_STARTING_WITH_UPPERCASE", "ID_STARTING_WITH_LOWERCASE", "LEXER_CHAR_SET", 
		"DOC_COMMENT", "BLOCK_COMMENT", "LINE_COMMENT", "INT", "STRING_LITERAL", 
		"UNTERMINATED_STRING_LITERAL", "BEGIN_ARGUMENT", "BEGIN_ACTION", "OPTIONS", 
		"TOKENS", "CHANNELS", "IMPORT", "FRAGMENT", "LEXER", "PARSER", "GRAMMAR", 
		"PROTECTED", "PUBLIC", "PRIVATE", "RETURNS", "LOCALS", "THROWS", "CATCH", 
		"FINALLY", "MODE", "COLON", "COLONCOLON", "COMMA", "SEMI", "LPAREN", "RPAREN", 
		"LBRACE", "RBRACE", "RARROW", "LT", "ASSOC", "RIGHT", "LEFT", "FAIL", 
		"GT", "ASSIGN", "QUESTION", "STAR", "PLUS_ASSIGN", "PLUS", "OR", "DOLLAR", 
		"RANGE", "DOT", "AT", "HEADER", "MEMBERS", "SHARP", "NOT", "ID", "WS", 
		"ERRCHAR", "END_ARGUMENT", "UNTERMINATED_ARGUMENT", "ARGUMENT_CONTENT", 
		"END_ACTION", "UNTERMINATED_ACTION", "ACTION_CONTENT", "OPT_BLOCK_COMMENT", 
		"OPT_LINE_COMMENT", "SUPER_CLASS", "LANGUAGE", "TOKEN_VOCAB", "TOKEN_LABEL_TYPE", 
		"OPT_WS", "TOK_BLOCK_COMMENT", "TOK_LINE_COMMENT", "TOK_ID", "TOK_WS", 
		"CHN_BLOCK_COMMENT", "CHN_LINE_COMMENT", "CHN_WS", "LEXER_COMMAND_LINE_COMMENT", 
		"SKIP_COMMAND", "MORE_COMMAND", "TYPE_COMMAND", "CHANNEL_COMMAND", "MODE_COMMAND", 
		"PUSHMODE_COMMAND", "POPMODE_COMMAND", "LEXER_COMMAND_WS", "UNTERMINATED_CHAR_SET"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ANTLRv4.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ANTLRv4Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class GrammarFileContext extends ParserRuleContext {
		public GrammarSpecContext grammarSpec() {
			return getRuleContext(GrammarSpecContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ANTLRv4Parser.EOF, 0); }
		public List<AnalyzerDirectiveSpecContext> analyzerDirectiveSpec() {
			return getRuleContexts(AnalyzerDirectiveSpecContext.class);
		}
		public AnalyzerDirectiveSpecContext analyzerDirectiveSpec(int i) {
			return getRuleContext(AnalyzerDirectiveSpecContext.class,i);
		}
		public List<RuleSpecContext> ruleSpec() {
			return getRuleContexts(RuleSpecContext.class);
		}
		public RuleSpecContext ruleSpec(int i) {
			return getRuleContext(RuleSpecContext.class,i);
		}
		public List<ModeSpecContext> modeSpec() {
			return getRuleContexts(ModeSpecContext.class);
		}
		public ModeSpecContext modeSpec(int i) {
			return getRuleContext(ModeSpecContext.class,i);
		}
		public GrammarFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRv4Listener ) ((ANTLRv4Listener)listener).enterGrammarFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRv4Listener ) ((ANTLRv4Listener)listener).exitGrammarFile(this);
		}
	}

	public final GrammarFileContext grammarFile() throws RecognitionException {
		GrammarFileContext _localctx = new GrammarFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_grammarFile);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			grammarSpec();
			setState(152);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(149);
					analyzerDirectiveSpec();
					}
					} 
				}
				setState(154);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ID_STARTING_WITH_UPPERCASE) | (1L << ID_STARTING_WITH_LOWERCASE) | (1L << DOC_COMMENT) | (1L << FRAGMENT) | (1L << PROTECTED) | (1L << PUBLIC) | (1L << PRIVATE))) != 0)) {
				{
				{
				setState(155);
				ruleSpec();
				}
				}
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MODE) {
				{
				{
				setState(161);
				modeSpec();
				}
				}
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(167);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrammarSpecContext extends ParserRuleContext {
		public GrammarTypeContext grammarType() {
			return getRuleContext(GrammarTypeContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(ANTLRv4Parser.SEMI, 0); }
		public List<TerminalNode> DOC_COMMENT() { return getTokens(ANTLRv4Parser.DOC_COMMENT); }
		public TerminalNode DOC_COMMENT(int i) {
			return getToken(ANTLRv4Parser.DOC_COMMENT, i);
		}
		public GrammarSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRv4Listener ) ((ANTLRv4Listener)listener).enterGrammarSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRv4Listener ) ((ANTLRv4Listener)listener).exitGrammarSpec(this);
		}
	}

	public final GrammarSpecContext grammarSpec() throws RecognitionException {
		GrammarSpecContext _localctx = new GrammarSpecContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_grammarSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOC_COMMENT) {
				{
				{
				setState(169);
				match(DOC_COMMENT);
				}
				}
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(175);
			grammarType();
			setState(176);
			identifier();
			setState(177);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrammarTypeContext extends ParserRuleContext {
		public TerminalNode LEXER() { return getToken(ANTLRv4Parser.LEXER, 0); }
		public TerminalNode GRAMMAR() { return getToken(ANTLRv4Parser.GRAMMAR, 0); }
		public TerminalNode PARSER() { return getToken(ANTLRv4Parser.PARSER, 0); }
		public GrammarTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRv4Listener ) ((ANTLRv4Listener)listener).enterGrammarType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRv4Listener ) ((ANTLRv4Listener)listener).exitGrammarType(this);
		}
	}

	public final GrammarTypeContext grammarType() throws RecognitionException {
		GrammarTypeContext _localctx = new GrammarTypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_grammarType);
		try {
			setState(184);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LEXER:
				enterOuterAlt(_localctx, 1);
				{
				setState(179);
				match(LEXER);
				setState(180);
				match(GRAMMAR);
				}
				break;
			case PARSER:
				enterOuterAlt(_localctx, 2);
				{
				setState(181);
				match(PARSER);
				setState(182);
				match(GRAMMAR);
				}
				break;
			case GRAMMAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(183);
				match(GRAMMAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnalyzerDirectiveSpecContext extends ParserRuleContext {
		public OptionsSpecContext optionsSpec() {
			return getRuleContext(OptionsSpecContext.class,0);
		}
		public DelegateGrammarsContext delegateGrammars() {
			return getRuleContext(DelegateGrammarsContext.class,0);
		}
		public TokensSpecContext tokensSpec() {
			return getRuleContext(TokensSpecContext.class,0);
		}
		public ChannelsSpecContext channelsSpec() {
			return getRuleContext(ChannelsSpecContext.class,0);
		}
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public List<TerminalNode> DOC_COMMENT() { return getTokens(ANTLRv4Parser.DOC_COMMENT); }
		public TerminalNode DOC_COMMENT(int i) {
			return getToken(ANTLRv4Parser.DOC_COMMENT, i);
		}
		public AnalyzerDirectiveSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_analyzerDirectiveSpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRv4Listener ) ((ANTLRv4Listener)listener).enterAnalyzerDirectiveSpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ANTLRv4Listener ) ((ANTLRv4Listener)listener).exitAnalyzerDirectiveSpec(this);
		}
	}

	public final AnalyzerDirectiveSpecContext analyzerDirectiveSpec() throws RecognitionException {
		AnalyzerDirectiveSpecContext _localctx = new AnalyzerDirectiveSpecContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_analyzerDirectiveSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOC_COMMENT) {
				{
				{
				setState(186);
				match(DOC_COMMENT);
				}
				}
				setState(191);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(197);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OPTIONS:
				{
				setState(192);
				optionsSpec();
				}
				break;
			case IMPORT:
				{
				setState(193);
				delegateGrammars();
				}
				break;
			case TOKENS:
				{
				setState(194);
				tokensSpec();
				}
				break;
			case CHANNELS:
				{
				setState(195);
				channelsSpec();
				}
				break;
			case AT:
				{
				setState(196);
				action();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
